tests/invalid/erro_tipo_string.lang
string s;
s = "ola";
int x;
x = 10;

x = x + s;